# owlguardco-charles-schwab

./: .env.example  .gitignore  CLAUDE.md  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements-railway.txt  requirements.txt
dashboard/: db.py  server.py  state.py
dashboard/static/: index.html
schwab/: __init__.py
schwab/agents/: __init__.py  _llm.py  execution.py  research.py  risk.py  signal.py
schwab/auth/: __init__.py  oauth.py
schwab/backtest/: engine.py  signals.py
schwab/client/: __init__.py  accounts.py  base.py  market_data.py  orders.py
schwab/data/: .gitkeep
schwab/discord/: __init__.py  notifier.py
schwab/fincept/: __init__.py  client.py  config.py  macro_context.py
schwab/options/: chain.py
schwab/pipeline/: __init__.py  runner.py
schwab/safety/: __init__.py  kill_switch.py  mandate.py  order_guard.py
schwab/screener/: scanner.py
schwab/unusual_whales/: client.py  flow_context.py
scripts/: account_status.py  auth_setup.py  backtest.py  dashboard.py  fincept_discover.py  flow.py  run_pipeline.py  scan.py
tests/: test_backtest.py  test_dashboard.py  test_mandate.py  test_oauth.py  test_options_chain.py  test_order_guard.py  test_screener.py  test_unusual_whales.py
