[project]
name = "owlguardco-charles-schwab"
version = "0.1.0"
description = "OwlGuardCo personal Charles Schwab AI-agent trading system (US equities, intraday swing)."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["schwab*"]
